
Bug fixes

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.7.7
New functions

Improvements

Bug fixes

mcdemodata: add to 'mapar' and 'japar' the new 'background' option to specify a background image (e.g. 'peppers.png') or a video ('xylophone.mp4') to be displayed as a background to the mocap data

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.7.8
New functions

Improvements

mcanimatedata: add support for image and video backgrounds (using the 'background' option in 'animpar' structures)

Bug fixes

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.7.9
New functions

Improvements

Bug fixes

mcanimatedata: fix support for image and video backgrounds

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.8.0
New functions

mcboundvol: Calculates the convex hull volume (or its corresponding area on the horizontal plane) that envelops the points of a mocap data structure

Improvements

Bug fixes

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.8.1
New functions

Improvements

mcwindow: add support for mccomplexity and mcfluidity; clarify its documentation

Bug fixes

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.8.2
New functions

Improvements

Bug fixes

mcanimatedata: fixed issue when data and animpar frame rates differ

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.8.3
New functions

Improvements

Bug fixes

mcgetmarker: get quaternions for all selected markers
mcread: correctly import quaternion data from Qualysis + Theia 3D markerless pose estimation

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.8.4
New functions

Improvements

mcplotframe: use native size video for background

Bug fixes

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Version 1.8.5
New functions

Improvements

Bug fixes

mcplotframe: fix backwards compatibility (p.background)