@@ -33,7 +33,10 @@ function p = mcinitanimpar(x)
 %   showmnum: show marker numbers, 1=yes, 0=no (0)
 %   numbers: array indicating the markers for which number is to be shown ([])
 %   showfnum: show frame numbers, 1=yes, 0=no (0)
-%   background: specify a background image (e.g. 'peppers.png') or a video ('xylophone.mp4') to be displayed as a background to the mocap data ([]). Note that, when using videos with mcplotframe, always the first video frame will be displayed. When videos are used with mcanimate, the videos will be played at the frame rate specified in the fps animation parameter strucutre field.
+%   background: background image or video parameters:
+%        input: background image (e.g. 'peppers.png') or video ('xylophone.mp4') to be displayed as a background to the mocap data ([]). Note that, when using videos with [`mcplotframe`](4.-function-reference#mcplotframe), always the first video frame will be displayed. When videos are used with [`mcanimate`](4.-function-reference#mcanimate), the videos will be played at the frame rate specified in the fps animation parameter structure field.
+%        fillfigure: resizes the image or video to fill the entire figure (`scrsize` can be modified accordingly to keep the aspect ratio of the video), 1=yes, 0=no (0)
+%        starttime: timestamp (in seconds) of the first video frame to read, specified as a numeric scalar. The value can be between zero and the duration of the video (0)
 %   animate: create animation, 1=yes, 0=no (0)
 %   visible: state of visibility of the figure, 1=yes, 0=no (1)
 %   hold: retain the current or the upcoming plot (similar functionality to 'hold on' in Matlab), 1=yes, 0=no (0)
@@ -108,7 +111,9 @@ p.trl = 0;
 p.showmnum = 0;
 p.numbers = [];
 p.showfnum = 0;
-p.background = [];
+p.background.input = [];
+p.background.fillfigure = 0;
+p.background.starttime = 0;
 p.animate = 0;
 p.visible = 1;
 p.hold = 0;
